tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__UpgradingtheAlve-AAAAAAAAAAAAAAAAAAAIKw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2091,
  "prerequisites": [
    1123
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These basic upgrades to the Alveary make it more powerful.\n\nFrame Housing - Automation-enabled frame slot for the Alveary. Uses §55 durability§r every bee tick (27s). If it runs out on that tick, it has no effect.\nAlveary Stabilizer - Prevents the bees from mutating into another species. Ideal for breeding traits into a line.\nAlveary Transmission - Power input for upgrades that use power.\nHatchery - Hatches larval bees for use in Genetics or to create additional drones. Not used for Gendustry stuff.\nAlveary Sieve - Instead of the pollen from a bee fertilizing a nearby tree, it is stored here and can be manually applied. Requires manually placing woven silk in the inventory.\nSwarmer - Creates additional Ignoble queens in hives around the Alveary. These are genetic copies of the original. This uses royal jelly or aromatic lumps. The latter are more effective.\n\n[note]Note that all upgrade blocks must be in the bottom 2 layers. The center block also cannot be an upgrade block, though the bottom center can.[/note]\n\n[warn]When using power, the transmission block will suck down entire amps to fill a tiny amount. Use the EIO capacitors or something similar to prevent this.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Upgrading the Alveary",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1123
  ],
  "rewards": [],
  "tasks": []
}
