tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__XMenorShouldISay-AAAAAAAAAAAAAAAAAAAILg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2094,
  "prerequisites": [
    1123
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Mutator can vastly accelerate genetic mutations, even allowing those ultra rare bees to be bred. Items inserted into the Mutator control how much mutation it causes.\n\nSoul Sand - 50 percent increase\nEnder Pearl - 100 percent increase\nEye of Ender - 300 percent increase",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "X-Men, or Should I Say X-Bee?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1123
  ],
  "rewards": [],
  "tasks": []
}
